[build-system]
requires = [
    "setuptools>=42",
    "wheel>=0.36.2"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 99

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 99
known_first_party = ["envarify"]
known_third_party = ["pytest", "setuptools"]


[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = "tenacity.*"
ignore_missing_imports = true
